2013-09-16  Stipe Tolj  <stolj at kannel.org>
    * gw/smsc/smsc_smpp.c: fix PANIC conditions within octstr_check_range() if
      the SMSC provides a positive ACK via command_status = 0x00, but doesn't
      provide any message_id. We'll consider the MT still as successfull, but
      warn the user via an error() entry log.
      
2013-08-23 Alexander Malysh <amalysh at kannel.org>
    * aclocal.m4, configure, configure.in, gw-config.h.in, gwlib/dbpool_oracle.c:
      added OCIPing to check oracle connection.

2013-08-23 Alexander Malysh <amalysh at kannel.org>
    * gwlib/http.c: fixed issue when Host already set in the headers but we set it again.

2013-08-22 Alexander Malysh <amalysh at kannel.org>
    * test/test_http.c: added don't follow redirect option.

2013-08-22 Alexander Malysh <amalysh at kannel.org>
    * gwlib/cfg.def: added dlr-mask to sms-service group.

2013-08-19  Stipe Tolj  <stolj at kannel.org>
    * doc/userguide/userguide.xml: document 'dlr-[url|mask]' config directives
      for 'group = sms-service' context.
    * gw/smsbox.c: add corresponding DLR values in func send_message() if we
      have some default values from the config, but no adhoc value from the
      HTTP response.
    * gw/urltrans.[ch]: added dlr_mask into URLTranslation struct, and access
      functions, since the struct is module scoped.

2013-07-03  Stipe Tolj  <stolj at kannel.org>
    * gw/wap_push_ppg.c: fix assertion check conditions.
    
2013-06-21  Stipe Tolj  <stolj at kannel.org>
    * wap/wsp_headers.c: adding some debug() lines to trace WSP header packing
      better for WAP Push messages, i.e. SI or MMS indications.
    * wap/wsp_unit.c: added wsp_pdu_dump() to dump the WSP PDU before packing
      for push transport, source code re-formating. NLC.
      
2013-06-19  Stipe Tolj  <stolj at kannel.org>
    * wap/wsp_strings.def: add various new WSP byte codes.
    * wap/wsp.h: add WSP_TBD to wsp_encoding enumeration.
    